<resources>
    <string name="app_name">Purrito Planner</string>
    <string name="recipe_title_text">Potato Soup</string>
    <string name="recipe_tags_text"><i>Lunch, dinner, soup,\nquick and easy</i></string>
    <string name="recipe_link_text"><a href="https://sugarspunrun.com/creamy-potato-soup-recipe/">View Recipe\non Internet</a></string>
    <string name="placeholder_recipe_text">1. Put bacon pieces in pan and cook until crispy. \n2. Take bacon out of pan, add chopped onion and garlic, cook both in pan. \n3. Add flour to ingredients in pan. \n4. Add potatoes, milk, cream, and chicken broth to pan\n5. Bring to a boil and cook until potatoes are soft\n6. Reduce heat to a simmer and stir\n7. Add sour cream and (optional) bacon pieces, stir well\n8. Allow soup to simmer for 10 minutes\n9. Allow to cool, and serve</string>
    <string-array name="ingredients">
        <item>&#8226; Potatoes (4, chopped)</item>
        <item>&#8226; Cream (1 cup)</item>
        <item>&#8226; Milk (2 cups)</item>
    </string-array>
    <string name="push_reminders">Push Reminders:</string>
    <string name="weekly_objectives">Weekly Objectives:</string>
    <string name="theme">Theme:</string>
    <string name="developer_note_header">Developer\'s Note:</string>
    <string name="developer_note">Thank you for using our app!</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_to_list">Add to List</string>
    <string name="done_editing">Done Editing</string>
    <string name="hat_lock_reset">Hat Lock Reset:</string>
    <string name="objective1">Objective 1:</string>
    <string name="objective2">Objective 2:</string>
    <string name="objective3">Objective 3:</string>
    <string name="objective4">Objective 4:</string>
    <string name="my_shopping_list">My Shopping List</string>
    <string name="new_recipe_title_header">Recipe Title (Required):</string>
    <string name="new_recipe_link_header">Recipe Link (Optional):</string>
    <string name="ingredients_header">INGREDIENTS:</string>
    <string name="new_ingredient">New Ingredient</string>
    <string name="cooking_notes">COOKING NOTES:</string>
    <string name="new_item">New Item:</string>
    <string name="quantity">Quantity:</string>
    <string name="pick_hat">Pick Your Hat!</string>
    <string name="top_hat">Top Hat</string>
    <string name="pirate_hat">Pirate Hat</string>
    <string name="jester_cap">Jester Cap</string>
    <string name="tiara">Tiara</string>
    <string name="bow">Bow</string>
    <string name="nothing">Nothing</string>
    <string name="planner_title">Weekly Meal Plan</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="add_button_title">Add Meal</string>
    <string name="clear_button_title">Clear Meals</string>
    <string name="m">M</string>
    <string name="tu">Tu</string>
    <string name="w">W</string>
    <string name="th">Th</string>
    <string name="f">F</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
</resources>