<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button_title"
        android:textSize="25sp"
        android:textColor="#000000"/>

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/monButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m" />

        <RadioButton
            android:id="@+id/tuesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tu" />

        <RadioButton
            android:id="@+id/wedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w" />

        <RadioButton
            android:id="@+id/thursButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th" />

        <RadioButton
            android:id="@+id/friButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f" />

        <RadioButton
            android:id="@+id/satButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sa" />

        <RadioButton
            android:id="@+id/sunButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/su" />

    </RadioGroup>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="meal name"
        android:inputType="text"/>

</LinearLayout>